Добавлены текст и фото

--- a/14/14.html
+++ b/14/14.html
@@ -7,6 +7,68 @@
         <link rel="stylesheet" href="14.css">
     </head>
     <body>
-        
+        <h2>Станция Ягельная. 1949 год.</h2>
+        <h3>Жизненная необходимость</h3>
+            <p>В 1942-44 годах немецко-фашистские морские соединения блокировали и частично уничтожили советское судоходство на трассе Северного морского пути. С советской стороны погибло 964 человека, 17 кораблей были затоплены или серьёзно повреждены. Гитлеровский флот потерял лишь 2 подводные лодки. Нацистские арктические базы в 1941-1944 годах действовали на Новой Земле, на берегах Обской губы и Енисейского залива.</p>
+            <img src="1.jpg" alt="Советский ледокольный пароход «Александр Сибиряков» горит после боя с тяжелым немецким крейсером «Адмирал Шеер». 1942 год.">
+            <p>Руководству нашей страны стало очевидно, что советская оборона арктических морских коммуникаций слаба. Необходимо было строить морские и военно-воздушные базы. Для этого нужна была железная дорога, идущая параллельно Транссибирской магистрали, по северным районам страны. Первые изыскания будущей трассы железной дороги состоялись в 1943-44 годах.</p>
+            <img src="2.jpg" alt="Изыскатели на трассе будущей трансполярной магистрали. 1943 год.">
+            <img src="3.jpg" alt="Отчёт Уральской экспедиции Желдорпроекта. На обложке пунктиром нарисованы варианты будущей трансполярной магистрали. 1943 год.">
+            <p>6 и 9 августа 1945 года военно-воздушные силы США сбросили атомные бомбы «Малыш» и «Толстяк» на японские города Хиросиму и Нагасаки. Погибло более 180 тысяч человек. Полёт бомбардировщиков со смертоносными зарядами над Северным полюсом и сброс атомных бомб на города СССР стали вероятностью. На севере нашей страны сплошной системы противовоздушной обороны не было.</p>
+            <img src="4.jpg" alt="Вид на руины Хиросимы на следующий день после атомной бомбардировки. 1945 год.">
+        <h3>Начало строительства</h3>
+            <p>22 апреля 1947 года Совет Министров СССР принял постановление, в котором обязал МВД немедленно приступить к строительству крупного морского порта в Обской губе на мысе Каменный, судоремонтного завода и жилого посёлка, а также начать строительство железной дороги от Печорской магистрали к порту. Проект её сооружения был назван «строительство № 502». Но в начале 1949 года случился большой казус: выяснилось, что акватория Обской губы слишком мелководна для океанских судов. Поэтому правительство обратило своё внимание на следующую акваторию – реку Енисей.</p>
+            <img src="5.jpg" alt="Карта-схема трансполярной магистрали Салехард-Игарка, наложенная на карту полезных ископаемых">
+            <p>5 февраля 1949 года было принято Постановление Совета Министров СССР, в котором говорилось о строительстве железной дороги Салехард (р. Обь)-Игарка (р. Енисей) протяжённостью в 1300 километров. В IV квартале 1952 года предполагалось открыть рабочее движение по новой дороге, а в 1955 году начать её эксплуатацию.</p>
+            <p>При Северном Управлении сформировали два строительства – Обское № 501 и Енисейское № 503. Им предстояло прокладывать путь навстречу друг другу. Всем строительством руководил начальник Северного Управления МВД СССР Василий Арсениевич Барабанов.</p>
+            <img src="6.jpg" alt="Василий Арсениевич Барабанов">
+        <h3>Лагерные пункты</h3>
+            <p>К началу строительства на линии будущей магистрали было всего 5-6 маленьких населённых мест по нескольку домов в каждом, таких, как фактория Уренгой на берегу реки Пур. На новой железной дороге собрались построить 28 станций и 106 разъездов. В районе будущего города Новый Уренгой спроектировали станцию Ягельная. Лесотундру в короткие сроки наполнили десятки тысяч человек, которые через каждые 5-10 км вдоль дороги строили лагерные пункты на 400-500 человек.</p>
+            <p>Каждый лагерь представлял собой участок земли размером примерно 200 на 200 метров, огороженный тремя рядами колючей проволоки. По углам квадрата устанавливали вышки охраны с прожекторами.</p>
+            <img src="7.jpg" alt="Вышка охраны и ряды колючей проволоки. Надымский район. 2020 год.">
+            <p>На территории лагерного пункта ставили 5-6 бараков для заключённых. Бараки были разделены на две половины на 40 человек каждая. Входы в половины бараков были раздельные. В центре каждой половины сооружали печку из старой металлической бочки или кирпича. Вдоль стен настилали двухъярусные деревянные нары.</p>
+            <img src="8.jpg" alt="Остатки нар в лагере Щучий. Длина нар 150 см. Надымский район. 2020 год.">
+            <p>На территории каждого лагеря размещали также столовую, штрафной изолятор, баню для заключенных, иногда продуктовый ларек, склад личных вещей, медпункт, библиотеку, спецотдел, ведавший учётом зэков и распределением рабочей силы, опер-чекистский отдел, культурно-воспитательный и другие отделы.</p>
+            <img src="9.jpg" alt="Столовая в лагерном пункте Щучий. Надымский район. 2020 год.">
+            <img src="9а.jpg" alt="Штрафной изолятор. Лагпункт у разъезда Глухариный. Надымский район. 2020 год.">
+            <img src="9б.jpg" alt="Коридор штрафного изолятора. Лагпункт у разъезда Глухариный. Надымский район. 2020 год.">
+            <img src="10.jpg" alt="Камера в штрафном изоляторе. Лагпункт у разъезда Глухариный. Надымский район. 2020 год. ">
+            <p>За пределами лагеря располагались казарма охраны и жилье для начальства.</p>
+            <img src="11.jpg" alt="Дом начальника лагеря. Лагпункт у разъезда Глухариный. Надымский район. 2020 год.">
+            <p>Связь строителей с управлениями поддерживалась сначала по радио, а затем по столбовой телефонно-телеграфной линии, протянутой в конце 1949 года от Салехарда до Игарки вдоль предполагавшейся трассы. </p>
+            <img src="12.jpg" alt="Упавший столб линии связи Москва-Игарка. Надымский район. 2020 год.">
+            <p>Она обеспечила прямую связь обоих строительств с Москвой. Для поддержания работоспособности линии через каждый 20 км были устроены избушки связистов.</p>
+        <h3>Порядок строительства</h3>
+            <p>Строительство трансполярной магистрали полностью перевернуло и подчинило себе жизнь этого ранее малонаселённого края. Вдоль всей магистрали специальными тракторными поездами был проложен автозимник.</p>
+            <img src="13.JPG" alt="Санно-тракторный поезд вывозит заключённых и грузы для обустройства лагеря. 1949-1952 годы.">
+            <img src="14.jpg" alt="Автопоезд вывозит заключённых и грузы для обустройства лагеря. 1949-1952 годы.">
+            <p>Лагерные пункты размещали вдоль автозимника. Строили в основном в короткий летний сезон. Порядок строительства трассы выглядел так. Сначала, если был лес, рубили просеку. Затем выкапывали водоотводы для осушения местности. Далее прокладывали временные автодороги к строительным карьерам. На осушенной полосе лесотундры устраивали лежнёвку – бревенчатую дорогу, на которую сверху возводили из каменно-песочной смеси насыпь и укладывали полотно железной дороги.</p>
+            <img src="15.jpg" alt="Заключённые на разгрузочных работах. 1949-1952 годы.">
+            <p>Рельсы доставляли с большой земли. Кроме отечественных и трофейных, вывезенных после Великой Отечественной войны из Германии, использовали рельсы, купленные ещё во времена Российской Империи у той же Германии, США, Люксембурга и прочих.</p>
+            <img src="16.jpg" alt="Рельсы трансполярной магистрали. Надымский район. 2020 год.">
+            <img src="17.jpg" alt="Рельсы трансполярной магистрали. Надымский район. 2020 год.">
+            <img src="18.jpg" alt="Рельсы трансполярной магистрали. Надымский район. 2020 год.">
+            <p>Через малые водотоки строили мосты, которые привозили с салехардского деревообрабатывающего комбината в почти собранном виде. Мосты через реки средней величины сооружали из металла.</p>
+            <img src="19.jpg" alt="Сохранившееся мостовое сооружение трансполярной магистрали. Надымский район. 2020 год.">
+            <p>Строительство вели в условиях вечной мерзлоты. Поэтому летом после таяния верхнего слоя почвы, происходила деформация полотна дороги и её инженерных сооружений. Большие силы ежегодно уходили на ремонт насыпи, укрепление полотна, мостов и прочие работы.</p>
+            <p>К концу 1952 года строительство № 501 вышло к реке Большая Хетта, которая находится примерно в 30 км восточнее реки Надым. В августе 1952 года, как и было запланировано, открыли рабочее движение на участке Салехард-Надым. В марте 1953 года между населёнными пунктами ходил пассажирский поезд.</p>
+        <h3>Неожиданный финал великой стройки</h3>
+            <p>Всё закончилось в один миг. 5 марта 1953 года умер И. В. Сталин. 25 марта 1953 года вышло постановление Совета Министров СССР, согласно которому строительство железной дороги Чум-Салехард-Игарка, а также порта, судоремонтных мастерских и жилого посёлка в районе города Игарки было прекращено. Из указанных в проекте 1470 километров главного пути этой железной дороги успели уложить 887 км, а из 112,5 километра станционных путей – 76 километров. То есть провели больше половины всех работ.</p>
+            <p>Весной 1953 года здесь трудились 28 000 заключённых, 2 500 человек охраны, 2 800 вольнонаёмных рабочих, 4 500 представителей административно-технического персонала, 1 200 человек лагерного персонала. Всего 39 000 человек.</p>
+            <img src="20.jpg" alt="Работы на насыпи. 1949-1952 годы.">
+            <p>26 мая 1953 года появилось постановление о ликвидации до 1 сентября строительства железной дороги Чум-Салехард-Игарка. В дальнейшем Министерство путей сообщения добилось разрешения на ликвидацию всех подразделений строительства, кроме участка железной дороги Чум–Лабытнанги, принятого в 1955 году в постоянную эксплуатацию. Телефонную линию на участке Салехард-Игарка приняло в эксплуатацию Министерство связи. В короткие строки всё, что можно было вывезти, вывезли, что нельзя – уничтожили или бросили. Заключённых, которые не подлежали амнистии, отправили на другие стройки.</p>
+            <p>Так вкратце выглядит история трансполярной дороги – грандиозного незавершенного замысла, который, будь он воплощен в жизнь, значительно облегчил бы освоение открытых позже месторождений углеводородов и, как знать, мог изменить ход всей истории нашей страны.</p>
+        <h3>Трансполярная магистраль на месте будущего города Новый Уренгой</h3>
+            <p>В 1943-1944 годах здесь отработали партии геодезистов и топографов, которые заложили пункты опорной геодезической сети. Затем проектировщики наметили будущую трассу и места под строительство объектов железнодорожной инфраструктуры. Они вписали типовой проект станции в существующий ландшафт.</p>
+            <p>Надымский историк Вадим Николаевич Гриценко передал нам план спроектированной на месте будущего Нового Уренгоя станции Ягельная. Он полностью повторяет элементы ландшафта современной железнодорожной станции Новый Уренгой.</p>
+            <img src="21.JPG" alt="План станции Ягельная. 1949 год.">
+            <p>В 1949-1951 годах в районе будущего города построили участок столбовой линии телефонно-телеграфной связи Москва-Игарка и избушки линейных связистов.</p>
+            <p>Рельсового полотна железной дороги и насыпи в районе будущих жилых массивов Нового Уренгоя не случилось. Укладку рельс остановили западнее современного посёлка Пангоды, у реки Правая (Большая) Хетта, в 180 км западнее от Нового Уренгоя. Далее на восток в сторону реки Пур, большей частью по долине реки Евояхи, было уложено ещё 150 км земляного полотна.</p>
+            <p>Кольями наметили маршрут будущей железнодорожной насыпи. Летом 1953 года на фактории Уренгой, которая находилась в 80 км восточнее на реке Пур, были сконцентрированы материалы для строительства станций Ягельная и Пур, разъездов Нартовый, Мутный и др. Но именно в этот момент, в середине 1953 года строительство железной дороги остановили.</p>
+        <h3>Живучий топоним</h3>
+            <p>Станция Ягельная совсем чуть-чуть не дождалась своего строительства, однако имени её не суждено было исчезнуть. Спустя 20 лет, в 1973 году, недалеко от её месторасположения основали посёлок первопроходцев Уренгойского месторождения – Ягельное. Он просуществовал до 1975 года и был переименован в посёлок Новый Уренгой. Но в этом же году имя Ягельное закрепилось за первым аэропортом посёлка, который проработал до 1980 года.</p>
+            <img src="22.jpg" alt="Аэропорт Ягельное. Конец 1970-х годов.">
+            <p>В начале 1980-х годов в 8 км западнее железнодорожного вокзала города Новый Уренгой была построена новая станция Ягельная, навсегда утвердившая в топонимике первое историческое название этой местности. Трансполярная магистраль 1949-1953 годов стала памятником истории.</p>
+            <img src="23.jpg" alt="Трансполярная магистраль сегодня. Надымский район. 2020 год.">
     </body>
     </html>
