--- a/5/5.html
+++ b/5/5.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Аллея мужества</title>
     <link rel="stylesheet" href="5.css">
 </head>
 <body>
+    <div class="Start">
+        <p> 
+            Аллея мужества заложена в 2017 году. Первым на ней был установлен памятный знак воинам-десантникам и <br>
+            морским пехотинцам. Инициатива установки памятника принадлежит членам региональной общественной <br>
+            организации «Десантное братство в ЯНАО» и военно-патриотического центра «Вымпел-Ямал».
+        </p>
+            <img src="foto1.jpg" alt="Открытие памятника">
+        <p>
+            Открытие памятник воинам-десантникам и морским пехотинцам. Фото Бориса Великова. 2017 год
+            <br>
+        </p>
+        <p>
+            Общественники организовали сбор средств на установку памятника, а администрация поддержала идею,<br>
+            выделив участок в Южном районе города за Богоявленским собором. Вклад в столь значимое для города <br>
+            событие внесли ООО «Уренгойдорстрой», МУП «Уренгойское городское хозяйство» и ООО «Уренгойские <br>
+            городские сети» <br>
+            На памятнике высечена цитата «Никто, кроме нас», ставшая девизом ВДВ, и изображен портрет основателя <br>
+            воздушно-десантных войск, генерала армии, героя Советского Союза Василия Филипповича Маргелова. 
+        </p>
+            <img src="foto2.jpg" alt="Памятник воинам-десантникам и морским пехотинцам">
+            <br>
+    </div>
     
 </body>
 </html>
