--- a/15/15.html
+++ b/15/15.html
@@ -4,26 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset15.css">
     <link rel="stylesheet" href="15.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Памятный знак «Пионерам освоения Уренгоя»</h2>
-    <h3>Год создания: 1975 – 1995</h3>
-    <h3>Год установки: 2003</h3>
-        <p>Гостей Нового Уренгоя, прибывающих в город поездом, встречает величественная фигура женщины. Это памятник «Пионерам освоения Уренгоя», символ трудового подвига первопроходцев.</p>
-        <img src="1. пока такой памятник.jpg" alt="Памятный знак «Пионерам освоения Уренгоя»">
+    <div class="welcomeBlockWrapper">
+        <div class="centeredBlock">
+            <p class="welcomeBlockHeader">
+                Памятный знак<br>
+                «Пионерам освоения Уренгоя»
+            </p>
+            <p class="welcomeBlockSubHeader">
+                Локация туристического маршрута<br>
+                «Легенды Нового Уренгоя»
+            </p>
+        </div>
+    </div>
+    <div class="centeredBlock">
+        <p style="font-weight: 700; font-style: italic;">Год создания: 1975 – 1995</p>
+        <p style="font-weight: 700; font-style: italic;">Год установки: 2003</p>
+        <figure class="imgRight">
+            <img src="1. пока такой памятник.jpg" alt="Памятный знак «Пионерам освоения Уренгоя»">
+            <figcaption>Памятный знак «Пионерам освоения Уренгоя»</figcaption>
+        </figure>
+        <p style="line-height: 1000%;">Гостей Нового Уренгоя, прибывающих в город поездом, встречает величественная фигура женщины. Это памятник «Пионерам освоения Уренгоя», символ трудового подвига первопроходцев.</p>
+        <div class="clearfix"></div>
+        <figure class="imgLeft">
+            <img src="2.фото НВ Распопов.jpg" alt="Николай Васильевич Распопов">
+            <figcaption>Николай Васильевич Распопов</figcaption>
+        </figure>
         <p>Автор памятника – скульптор Николай Васильевич Распопов, заслуженный художник России.</p>
-        <img src="2.фото НВ Распопов.jpg" alt="Николай Васильевич Распопов">
         <p>Он принадлежит к поколению, которое заявило о себе в искусстве в конце 1950-х – начале 1960-х. Этих художников объединяет тяжелое военное детство, серьезное отношение к правде жизни, любовь и уважение к сильным и ярким народным характерам. Родился Николай Васильевич в декабре 1932 года в деревне Усалка Тюменской области. Свои первые профессиональные навыки скульптор получил в художественной студии при Тобольском рыбопромышленном техникуме (1948 – 1952 годы). С 1954 по 1977 годы он работал в Тобольских художественно-производственных мастерских Тюменского отделения художественного фонда РСФСР. С 1962 года принят в союз художников СССР. С 1977 года живет и работает в Тюмени. Николай Васильевич участвует в выставках различного уровня, его произведения находятся во многих музеях Сибири и в частных российских собраниях.</p>
+        <div class="clearfix"></div>
+        <figure class="imgRight">
+          <img src="2. Распопов со скульптурой.JPG" alt="Эскизы будущей скульптуры">
+          <figcaption>Эскизы будущей скульптуры</figcaption>  
+        </figure>
         <p>Автор так вспоминает об истории появления монумента: «В 1992 году производственное объединение «Уренгойгазпром» предложило мне сделать памятник, посвященный подвигу первопроходцев. Я согласился. Дело в том, что в моей душе нашло отклик открытие Уренгойского месторождения, и мне хотелось запечатлеть в художественном образе это событие еще до предложения объединения… Генеральный директор ПО «Уренгойгазпром» Рим Султанович Сулейманов, осмотрев памятник со всех сторон, сказал: «Нужная вещь. Красивая вещь».</p>
-        <img src="2. Распопов со скульптурой.JPG" alt="Эскизы будущей скульптуры">
+        <div class="clearfix"></div>
+        <figure class="imgLeft">
+            <img src="4. установка.JPG" alt="Открытие памятного знака. 5 сентября 2003 года">
+            <figcaption>Открытие памятного знака. 5 сентября 2003 года</figcaption>
+        </figure>
         <p>Монумент был установлен в 2003 году перед зданием Уренгойского газопромыслового управления ООО «Уренгойгазпром».</p>
-        <img src="4. установка.JPG" alt="Открытие памятного знака. 5 сентября 2003 года">
+        <div class="clearfix"></div>
+        <figure class="imgRight">
+            <img src="5.  закладка капсулы.jpg" alt="Закладка капсулы в основании монумента. Газета «Газ Уренгоя», 12 сентября 2003 года ">
+            <figcaption>Закладка капсулы в основании монумента. Газета «Газ Уренгоя», 12 сентября 2003 года</figcaption>
+        </figure>
         <p>5 сентября ООО «Уренгойгазпром» отмечало 25-летний юбилей со дня образования, День работников нефтяной и газовой промышленности и День города в Новом Уренгое. В этот день состоялось торжественное открытие памятника. Почетное право открыть скульптуру было предоставлено начальнику Уренгойского газопромыслового управления ООО «Уренгойгазпром» Николаю Ивановичу Дубине и мастеру по добыче газа Петру Николаевичу Щербине, которые стояли у истоков освоения Уренгойского нефтегазоконденсатного месторождения. В основание монумента была заложена капсула с «Посланием к будущему поколению газовиков», текст «Послания» зачитал Валентин  Михайлович Зыкин — Заслуженный работник нефтяной и газовой промышленности РФ, оператор по добыче нефти и газа Уренгойского газопромыслового управления. Почетное право заложения капсулы было предоставлено Юрию Васильевичу Торопову — строителю, воздвигнувшему эту скульптурную композицию. Капсула будет вскрыта в 2028 году, в год 50-летия ООО «Уренгойгазпром» (с 2008 года – ООО «Газпром добыча Уренгой»).</p>
-        <img src="5.  закладка капсулы.jpg" alt="Закладка капсулы в основании монумента ">
-        <img src="4. Правда Севера 9.09.2003.JPG" alt="Газета «Газ Уренгоя», 12 сентября 2003 года">
         <p>Высота памятника составляет 12 метров, вес — 3 тонны. Пьедестал создан из белого мрамора, который воплощает собой образ севера. Сама скульптура отчеканена из меди. Этот пластичный металл позволяет передать тончайшие детали и монументальные формы. Интересно, что медь со временем темнеет и приобретает зеленоватый отлив. Такой эффект только усиливает выразительность скульптуры. Женская фигура олицетворяет Родину-мать. Её спокойный и величественный силуэт выражает уверенность первопроходцев в достижении своей цели. Левой рукой она сдерживает подземную мощь, раскрывает необузданную тайну природы и, в то же время, призывает к бережному использованию  этих богатств. Сам образ собирательный, скульптор подсмотрел его с разных людей и также вдохновлялся иконой Пресвятой Богородицы.</p>
         <p>С обратной стороны скульптуры вписана фонтанирующая лава, разделенная на два потока. Один поток взлетает ввысь, но усмиренный силой разума человека, изменяет направление  и образует ореол над головой женщины. Второй поток идет вправо и переходит в правую руку, как будто превращаясь в чашу – символ напутствия, доброжелательности, благополучия и призыва следовать по пути первопроходцев.</p>
-        <p>По замыслу автора, от общего восприятия памятника в сердце зрителя будет оставаться впечатление величественности дела и жизни тех, в честь кого воздвигнут монумент. В.П. Владимиров, заместитель Генерального директора концерна «Главтюменьгеология» так отозвался о монументальной работе Николая Распопова: «Как теплота сердец первопроходцев, отданная Матушке-Земле, возвращается к людям её добром и энергией, так душа, вложенная скульптором Распоповым, облагораживает образ Земли-кормилицы, вселяет в него уверенность, что жизнь и труд на суровом и прекрасном Севере Тюменьщины прожита не зря. Спасибо Вам, творец духовной пищи!»</p>
+        <p>По замыслу автора, от общего восприятия памятника в сердце зрителя будет оставаться впечатление величественности дела и жизни тех, в честь кого воздвигнут монумент. В.П. Владимиров, заместитель Генерального директора концерна «Главтюменьгеология» так отозвался о монументальной работе Николая Распопова: «Как теплота сердец первопроходцев, отданная Матушке-Земле, возвращается к людям её добром и энергией, так душа, вложенная скульптором Распоповым, облагораживает образ Земли-кормилицы, вселяет в него уверенность, что жизнь и труд на суровом и прекрасном Севере Тюменьщины прожита не зря. Спасибо Вам, творец духовной пищи!».</p>
+    </div>
 </body>
 </html>
