--- a/31/31.html
+++ b/31/31.html
@@ -54,11 +54,11 @@
         <p>Как отметил глава Нового Уренгоя Иван Костогриз, памятный знак открывается в Новом Уренгое, как и во многих других городах России, накануне 200-летия Бородинского сражения русской армии под командованием М.И. Кутузова с французской армией в 1812 году. «Мы отдаем дань уважения предкам, которые две сотни лет назад отстояли Родину. Это важный вклад в патриотическое воспитание подрастающего поколения, повышение интереса к российской истории», – сказал Иван Костогриз</p>
         
         <figure class="imgLeft">
-            <img src="6. Открытие памятник Н.Уренгой.jpeg" alt="">
+            <img src="6. Открытие памятник Н.Уренгой.jpeg" alt="ткрытие памятника в Новом Уренгое">
             <figcaption>Открытие памятника в Новом Уренгое</figcaption>
         </figure>
         <figure class="imgLeft">
-            <img src="7. Памятник ХНП.jpeg" alt="">
+            <img src="7. Памятник ХНП.jpeg" alt="Памятный знак Хлеб нашей памяти">
             <figcaption>Памятный знак Хлеб нашей памяти</figcaption>
         </figure>
     </div>
